// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Portfolio/> Snapshot renders without crashing using mount 1`] = `
<Portfolio>
  <styled.div>
    <div
      className="sc-dlMDgC iFALYR"
    >
      <Home>
        <styled.section
          id="home"
        >
          <section
            className="sc-fnVZcZ hTsAbG"
            id="home"
          >
            <h1>
              Israel Deorce
            </h1>
            <styled.p
              className="subtitle"
            >
              <p
                className="sc-fFSPTT fbmbFW subtitle"
              >
                subtitle
              </p>
            </styled.p>
            <ExternalButtons>
              <styled.div>
                <div
                  className="sc-bdnxRM jJHyKE"
                >
                  <UIButton
                    id="blog-button"
                    label="button.visit_my_blog"
                  >
                    <styled.button
                      onClick={[Function]}
                      secondary={false}
                    >
                      <button
                        className="sc-crzoAE hOvMwS"
                        onClick={[Function]}
                      >
                        <span>
                          button.visit_my_blog
                        </span>
                      </button>
                    </styled.button>
                  </UIButton>
                  <UIButton
                    id="resume-button"
                    label="button.resume"
                    onClick={[Function]}
                    rightIcon={<FaGoogleDrive />}
                    secondary={true}
                  >
                    <styled.button
                      onClick={[Function]}
                      secondary={true}
                    >
                      <button
                        className="sc-crzoAE foTsck"
                        onClick={[Function]}
                      >
                        <span>
                          button.resume
                        </span>
                        <FaGoogleDrive>
                          <IconBase
                            attr={
                              Object {
                                "viewBox": "0 0 512 512",
                              }
                            }
                          >
                            <svg
                              fill="currentColor"
                              height="1em"
                              stroke="currentColor"
                              strokeWidth="0"
                              style={
                                Object {
                                  "color": undefined,
                                }
                              }
                              viewBox="0 0 512 512"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M339 314.9L175.4 32h161.2l163.6 282.9H339zm-137.5 23.6L120.9 480h310.5L512 338.5H201.5zM154.1 67.4L0 338.5 80.6 480 237 208.8 154.1 67.4z"
                                key="0"
                              />
                            </svg>
                          </IconBase>
                        </FaGoogleDrive>
                      </button>
                    </styled.button>
                  </UIButton>
                </div>
              </styled.div>
            </ExternalButtons>
          </section>
        </styled.section>
      </Home>
      <Skills>
        <styled.section
          id="skills"
        >
          <section
            className="sc-bkbkJK iQoGIF"
            id="skills"
          >
            <h2>
              button.skills
            </h2>
            <styled.div>
              <div
                className="sc-iemWCZ dyDPek"
              >
                <ProgressIndicator
                  description="skills.software_engineering"
                  percentage={99}
                >
                  <styled.div>
                    <div
                      className="sc-dIsUp kRpPEh"
                    >
                      <styled.div>
                        <div
                          className="sc-bqGGPW jUrrst"
                        >
                          <styled.div
                            percentage={99}
                          >
                            <div
                              className="sc-ksluID fMRnJV"
                            />
                          </styled.div>
                        </div>
                      </styled.div>
                      <div>
                        skills.software_engineering
                      </div>
                    </div>
                  </styled.div>
                </ProgressIndicator>
                <ProgressIndicator
                  description="skills.front (skills.react)"
                  percentage={90}
                >
                  <styled.div>
                    <div
                      className="sc-dIsUp kRpPEh"
                    >
                      <styled.div>
                        <div
                          className="sc-bqGGPW jUrrst"
                        >
                          <styled.div
                            percentage={90}
                          >
                            <div
                              className="sc-ksluID gQyraI"
                            />
                          </styled.div>
                        </div>
                      </styled.div>
                      <div>
                        skills.front (skills.react)
                      </div>
                    </div>
                  </styled.div>
                </ProgressIndicator>
                <ProgressIndicator
                  description="skills.back (skills.node, skills.dotnet)"
                  percentage={50}
                >
                  <styled.div>
                    <div
                      className="sc-dIsUp kRpPEh"
                    >
                      <styled.div>
                        <div
                          className="sc-bqGGPW jUrrst"
                        >
                          <styled.div
                            percentage={50}
                          >
                            <div
                              className="sc-ksluID gSttvk"
                            />
                          </styled.div>
                        </div>
                      </styled.div>
                      <div>
                        skills.back (skills.node, skills.dotnet)
                      </div>
                    </div>
                  </styled.div>
                </ProgressIndicator>
                <ProgressIndicator
                  description="skills.db"
                  percentage={25}
                >
                  <styled.div>
                    <div
                      className="sc-dIsUp kRpPEh"
                    >
                      <styled.div>
                        <div
                          className="sc-bqGGPW jUrrst"
                        >
                          <styled.div
                            percentage={25}
                          >
                            <div
                              className="sc-ksluID gXCOhW"
                            />
                          </styled.div>
                        </div>
                      </styled.div>
                      <div>
                        skills.db
                      </div>
                    </div>
                  </styled.div>
                </ProgressIndicator>
                <ProgressIndicator
                  description="skills.devops"
                  percentage={50}
                >
                  <styled.div>
                    <div
                      className="sc-dIsUp kRpPEh"
                    >
                      <styled.div>
                        <div
                          className="sc-bqGGPW jUrrst"
                        >
                          <styled.div
                            percentage={50}
                          >
                            <div
                              className="sc-ksluID gSttvk"
                            />
                          </styled.div>
                        </div>
                      </styled.div>
                      <div>
                        skills.devops
                      </div>
                    </div>
                  </styled.div>
                </ProgressIndicator>
                <ProgressIndicator
                  description="skills.automated_tests"
                  percentage={90}
                >
                  <styled.div>
                    <div
                      className="sc-dIsUp kRpPEh"
                    >
                      <styled.div>
                        <div
                          className="sc-bqGGPW jUrrst"
                        >
                          <styled.div
                            percentage={90}
                          >
                            <div
                              className="sc-ksluID gQyraI"
                            />
                          </styled.div>
                        </div>
                      </styled.div>
                      <div>
                        skills.automated_tests
                      </div>
                    </div>
                  </styled.div>
                </ProgressIndicator>
              </div>
            </styled.div>
          </section>
        </styled.section>
      </Skills>
      <Experience>
        <styled.section
          id="experience"
        >
          <section
            className="sc-dIvrsQ czLRA-d"
            id="experience"
          >
            <h2>
              button.experience
            </h2>
            <styled.div>
              <div
                className="sc-hHEiqL hQxvaI"
              >
                <Project
                  description="desc.hp"
                  image={
                    <SiHp
                      color="#0096D6"
                    />
                  }
                  key="0"
                  subtitle="subtitle"
                  title="HP Inc."
                >
                  <styled.div>
                    <div
                      className="sc-hBMUJo bXVrzm"
                    >
                      <div>
                        <SiHp
                          color="#0096D6"
                        >
                          <IconBase
                            attr={
                              Object {
                                "role": "img",
                                "viewBox": "0 0 24 24",
                              }
                            }
                            color="#0096D6"
                          >
                            <svg
                              color="#0096D6"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              stroke="currentColor"
                              strokeWidth="0"
                              style={
                                Object {
                                  "color": "#0096D6",
                                }
                              }
                              viewBox="0 0 24 24"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <title
                                key="0"
                              />
                              <path
                                d="M12 24h-.4l2.5-6.7h3.4c.6 0 1.2-.5 1.4-1L21.6 9c.4-1.2-.3-2.2-1.5-2.2h-4.7l-3.9 10.8-2.2 6.1C3.9 22.4 0 17.7 0 12 0 6.5 3.7 1.9 8.8.4L6.5 6.8 2.6 17.3h2.5l3.2-8.9h1.9L7 17.3h2.5l3-8.3c.4-1.2-.2-2.2-1.5-2.2H9L11.5 0h.5c6.6 0 12 5.4 12 12s-5.4 12-12 12zm7.3-15.7h-1.9l-2.7 7.3h1.9l2.7-7.3z"
                                key="1"
                              />
                            </svg>
                          </IconBase>
                        </SiHp>
                      </div>
                      <h3>
                        HP Inc.
                      </h3>
                      <h4>
                        subtitle
                      </h4>
                      <p>
                        desc.hp
                      </p>
                    </div>
                  </styled.div>
                </Project>
                <Project
                  description="desc.dell"
                  image={
                    <SiDell
                      color="#007DB8"
                    />
                  }
                  key="1"
                  subtitle="subtitle"
                  title="Dell Inc."
                >
                  <styled.div>
                    <div
                      className="sc-hBMUJo bXVrzm"
                    >
                      <div>
                        <SiDell
                          color="#007DB8"
                        >
                          <IconBase
                            attr={
                              Object {
                                "role": "img",
                                "viewBox": "0 0 24 24",
                              }
                            }
                            color="#007DB8"
                          >
                            <svg
                              color="#007DB8"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              stroke="currentColor"
                              strokeWidth="0"
                              style={
                                Object {
                                  "color": "#007DB8",
                                }
                              }
                              viewBox="0 0 24 24"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <title
                                key="0"
                              />
                              <path
                                d="M17.963 14.6V9.324h1.222v4.204h2.14v1.07h-3.362zm-9.784-3.288l2.98-2.292c.281.228.56.458.841.687l-2.827 2.14.611.535 2.827-2.216c.281.228.56.458.841.688a295.83 295.83 0 0 1-2.827 2.216l.61.536 2.83-2.295-.001-1.986h1.223v4.204h2.216v1.07h-3.362v-1.987c-.995.763-1.987 1.529-2.981 2.292l-2.981-2.292c-.144.729-.653 1.36-1.312 1.694-.285.147-.597.24-.915.276-.183.022-.367.017-.551.017H3.516V9.325H5.69a2.544 2.544 0 0 1 1.563.557c.454.36.778.872.927 1.43m-3.516-.917v3.21l.953-.001a1.377 1.377 0 0 0 1.036-.523 1.74 1.74 0 0 0 .182-1.889 1.494 1.494 0 0 0-.976-.766c-.166-.04-.338-.03-.507-.032h-.688zM11.82 0h.337a11.94 11.94 0 0 1 5.405 1.373 12.101 12.101 0 0 1 4.126 3.557A11.93 11.93 0 0 1 24 11.82v.36a11.963 11.963 0 0 1-3.236 8.033A11.967 11.967 0 0 1 12.182 24h-.361a11.993 11.993 0 0 1-4.145-.806 12.04 12.04 0 0 1-4.274-2.836A12.057 12.057 0 0 1 .576 15.67 12.006 12.006 0 0 1 0 12.181v-.361a11.924 11.924 0 0 1 1.992-6.396 12.211 12.211 0 0 1 4.71-4.172A11.875 11.875 0 0 1 11.82 0m-.153 1.23a10.724 10.724 0 0 0-6.43 2.375 10.78 10.78 0 0 0-3.319 4.573 10.858 10.858 0 0 0 .193 8.12 10.788 10.788 0 0 0 3.546 4.421 10.698 10.698 0 0 0 4.786 1.946c1.456.209 2.955.124 4.376-.26a10.756 10.756 0 0 0 5.075-3.062 10.742 10.742 0 0 0 2.686-5.28 10.915 10.915 0 0 0-.122-4.682 10.77 10.77 0 0 0-7.098-7.626 10.78 10.78 0 0 0-3.693-.525z"
                                key="1"
                              />
                            </svg>
                          </IconBase>
                        </SiDell>
                      </div>
                      <h3>
                        Dell Inc.
                      </h3>
                      <h4>
                        subtitle
                      </h4>
                      <p>
                        desc.dell
                      </p>
                    </div>
                  </styled.div>
                </Project>
                <Project
                  description="desc.intern"
                  image={
                    <img
                      src="test-file-stub"
                    />
                  }
                  key="2"
                  subtitle="desc.research_intern"
                  title="PUCRS"
                >
                  <styled.div>
                    <div
                      className="sc-hBMUJo bXVrzm"
                    >
                      <div>
                        <img
                          src="test-file-stub"
                        />
                      </div>
                      <h3>
                        PUCRS
                      </h3>
                      <h4>
                        desc.research_intern
                      </h4>
                      <p>
                        desc.intern
                      </p>
                    </div>
                  </styled.div>
                </Project>
                <Project
                  description="desc.ginatells"
                  image={
                    <GiClapperboard
                      color="#FF7F00"
                    />
                  }
                  key="3"
                  subtitle="desc.personal_project"
                  title="Gina Tells"
                >
                  <styled.div>
                    <div
                      className="sc-hBMUJo bXVrzm"
                    >
                      <div>
                        <GiClapperboard
                          color="#FF7F00"
                        >
                          <IconBase
                            attr={
                              Object {
                                "viewBox": "0 0 512 512",
                              }
                            }
                            color="#FF7F00"
                          >
                            <svg
                              color="#FF7F00"
                              fill="currentColor"
                              height="1em"
                              stroke="currentColor"
                              strokeWidth="0"
                              style={
                                Object {
                                  "color": "#FF7F00",
                                }
                              }
                              viewBox="0 0 512 512"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M419.682 26.2l-8.66 2.452L32.915 135.81 55.27 214.7l386.77-109.608L419.683 26.2zm-12.41 22.224l9.074 32.014-41.086-22.942 32.013-9.072zM350.77 64.438l56.8 31.714-37.084 10.51-56.8-31.715 37.084-10.51zm-61.577 17.45l56.803 31.716-37.084 10.51-56.8-31.718 37.08-10.51zm-61.574 17.45l56.802 31.715-37.084 10.51-56.803-31.715 37.084-10.51zm-61.577 17.45l56.803 31.716-37.084 10.51-56.8-31.717 37.08-10.51zm-61.574 17.45l56.8 31.715-37.083 10.51-56.802-31.715 37.084-10.51zm-45.86 26.227l41.085 22.94-32.01 9.072-9.074-32.012zM55 215v274h402V215H55zm18 18h33.273L73 266.273V233zm58.727 0h38.546l-46 46H85.727l46-46zm64 0h38.546l-46 46h-38.546l46-46zm64 0h38.546l-46 46h-38.546l46-46zm64 0h38.546l-46 46h-38.546l46-46zm64 0h38.546l-46 46h-38.546l46-46zM439 245.727V279h-33.273L439 245.727zM73 297h366v174H73V297zm248.635 46.57l-192.44.703.067 18 192.44-.703-.067-18zM130.7 391.33l-.134 17.998 92.707.703.137-18-92.71-.7zm127.155.7l-.2 18 63.913.702.2-17.998-63.913-.703z"
                                key="0"
                              />
                            </svg>
                          </IconBase>
                        </GiClapperboard>
                      </div>
                      <h3>
                        Gina Tells
                      </h3>
                      <h4>
                        desc.personal_project
                      </h4>
                      <p>
                        desc.ginatells
                      </p>
                    </div>
                  </styled.div>
                </Project>
                <Project
                  description="desc.kpis"
                  image={
                    <GiProgression
                      color="#0E6B0E"
                    />
                  }
                  key="4"
                  subtitle="desc.personal_project"
                  title="Software KPIs"
                >
                  <styled.div>
                    <div
                      className="sc-hBMUJo bXVrzm"
                    >
                      <div>
                        <GiProgression
                          color="#0E6B0E"
                        >
                          <IconBase
                            attr={
                              Object {
                                "viewBox": "0 0 512 512",
                              }
                            }
                            color="#0E6B0E"
                          >
                            <svg
                              color="#0E6B0E"
                              fill="currentColor"
                              height="1em"
                              stroke="currentColor"
                              strokeWidth="0"
                              style={
                                Object {
                                  "color": "#0E6B0E",
                                }
                              }
                              viewBox="0 0 512 512"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M463 20.3L315.6 75.65 368.5 109C274 228 137.3 301.3 21.8 329.2l32.72 59.6C184.3 346.5 321.7 270.2 410.2 135.4l40.3 25.4L463 20.3zm7.7 116.7l-4.8 54.8-51.3-32.4c-1.8 2.7-3.7 5.3-5.6 8V487h78V137h-16.3zM320.1 265c-12.7 11-25.8 21.4-39.1 31.2V487h78V265h-38.9zm-123.7 84c-14.4 7.6-28.8 14.6-43.4 21.2V487h78V349h-34.6zM25 393v94h78v-94h-5.68c-14.82 5.5-29.63 10.6-44.35 15.3l-7.06 2.2-9.6-17.5H25z"
                                key="0"
                              />
                            </svg>
                          </IconBase>
                        </GiProgression>
                      </div>
                      <h3>
                        Software KPIs
                      </h3>
                      <h4>
                        desc.personal_project
                      </h4>
                      <p>
                        desc.kpis
                      </p>
                    </div>
                  </styled.div>
                </Project>
                <Project
                  description="desc.ages"
                  image={
                    <img
                      src="test-file-stub"
                    />
                  }
                  key="5"
                  subtitle="desc.nonprofit_engineer"
                  title="AGES"
                >
                  <styled.div>
                    <div
                      className="sc-hBMUJo bXVrzm"
                    >
                      <div>
                        <img
                          src="test-file-stub"
                        />
                      </div>
                      <h3>
                        AGES
                      </h3>
                      <h4>
                        desc.nonprofit_engineer
                      </h4>
                      <p>
                        desc.ages
                      </p>
                    </div>
                  </styled.div>
                </Project>
              </div>
            </styled.div>
          </section>
        </styled.section>
      </Experience>
    </div>
  </styled.div>
</Portfolio>
`;

exports[`<Portfolio/> Snapshot renders without crashing using render 1`] = `
<div
  class="sc-dlMDgC iFALYR"
>
  <section
    class="sc-fnVZcZ hTsAbG"
    id="home"
  >
    <h1>
      Israel Deorce
    </h1>
    <p
      class="sc-fFSPTT fbmbFW subtitle"
    >
      subtitle
    </p>
    <div
      class="sc-bdnxRM jJHyKE"
    >
      <button
        class="sc-crzoAE hOvMwS"
      >
        <span>
          button.visit_my_blog
        </span>
      </button>
      <button
        class="sc-crzoAE foTsck"
      >
        <span>
          button.resume
        </span>
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M339 314.9L175.4 32h161.2l163.6 282.9H339zm-137.5 23.6L120.9 480h310.5L512 338.5H201.5zM154.1 67.4L0 338.5 80.6 480 237 208.8 154.1 67.4z"
          />
        </svg>
      </button>
    </div>
  </section>
  <section
    class="sc-bkbkJK iQoGIF"
    id="skills"
  >
    <h2>
      button.skills
    </h2>
    <div
      class="sc-iemWCZ dyDPek"
    >
      <div
        class="sc-dIsUp kRpPEh"
      >
        <div
          class="sc-bqGGPW jUrrst"
        >
          <div
            class="sc-ksluID fMRnJV"
          />
        </div>
        <div>
          skills.software_engineering
        </div>
      </div>
      <div
        class="sc-dIsUp kRpPEh"
      >
        <div
          class="sc-bqGGPW jUrrst"
        >
          <div
            class="sc-ksluID gQyraI"
          />
        </div>
        <div>
          skills.front (skills.react)
        </div>
      </div>
      <div
        class="sc-dIsUp kRpPEh"
      >
        <div
          class="sc-bqGGPW jUrrst"
        >
          <div
            class="sc-ksluID gSttvk"
          />
        </div>
        <div>
          skills.back (skills.node, skills.dotnet)
        </div>
      </div>
      <div
        class="sc-dIsUp kRpPEh"
      >
        <div
          class="sc-bqGGPW jUrrst"
        >
          <div
            class="sc-ksluID gXCOhW"
          />
        </div>
        <div>
          skills.db
        </div>
      </div>
      <div
        class="sc-dIsUp kRpPEh"
      >
        <div
          class="sc-bqGGPW jUrrst"
        >
          <div
            class="sc-ksluID gSttvk"
          />
        </div>
        <div>
          skills.devops
        </div>
      </div>
      <div
        class="sc-dIsUp kRpPEh"
      >
        <div
          class="sc-bqGGPW jUrrst"
        >
          <div
            class="sc-ksluID gQyraI"
          />
        </div>
        <div>
          skills.automated_tests
        </div>
      </div>
    </div>
  </section>
  <section
    class="sc-dIvrsQ czLRA-d"
    id="experience"
  >
    <h2>
      button.experience
    </h2>
    <div
      class="sc-hHEiqL hQxvaI"
    >
      <div
        class="sc-hBMUJo bXVrzm"
      >
        <div>
          <svg
            color="#0096D6"
            fill="currentColor"
            height="1em"
            role="img"
            stroke="currentColor"
            stroke-width="0"
            style="color:#0096D6"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title />
            <path
              d="M12 24h-.4l2.5-6.7h3.4c.6 0 1.2-.5 1.4-1L21.6 9c.4-1.2-.3-2.2-1.5-2.2h-4.7l-3.9 10.8-2.2 6.1C3.9 22.4 0 17.7 0 12 0 6.5 3.7 1.9 8.8.4L6.5 6.8 2.6 17.3h2.5l3.2-8.9h1.9L7 17.3h2.5l3-8.3c.4-1.2-.2-2.2-1.5-2.2H9L11.5 0h.5c6.6 0 12 5.4 12 12s-5.4 12-12 12zm7.3-15.7h-1.9l-2.7 7.3h1.9l2.7-7.3z"
            />
          </svg>
        </div>
        <h3>
          HP Inc.
        </h3>
        <h4>
          subtitle
        </h4>
        <p>
          desc.hp
        </p>
      </div>
      <div
        class="sc-hBMUJo bXVrzm"
      >
        <div>
          <svg
            color="#007DB8"
            fill="currentColor"
            height="1em"
            role="img"
            stroke="currentColor"
            stroke-width="0"
            style="color:#007DB8"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title />
            <path
              d="M17.963 14.6V9.324h1.222v4.204h2.14v1.07h-3.362zm-9.784-3.288l2.98-2.292c.281.228.56.458.841.687l-2.827 2.14.611.535 2.827-2.216c.281.228.56.458.841.688a295.83 295.83 0 0 1-2.827 2.216l.61.536 2.83-2.295-.001-1.986h1.223v4.204h2.216v1.07h-3.362v-1.987c-.995.763-1.987 1.529-2.981 2.292l-2.981-2.292c-.144.729-.653 1.36-1.312 1.694-.285.147-.597.24-.915.276-.183.022-.367.017-.551.017H3.516V9.325H5.69a2.544 2.544 0 0 1 1.563.557c.454.36.778.872.927 1.43m-3.516-.917v3.21l.953-.001a1.377 1.377 0 0 0 1.036-.523 1.74 1.74 0 0 0 .182-1.889 1.494 1.494 0 0 0-.976-.766c-.166-.04-.338-.03-.507-.032h-.688zM11.82 0h.337a11.94 11.94 0 0 1 5.405 1.373 12.101 12.101 0 0 1 4.126 3.557A11.93 11.93 0 0 1 24 11.82v.36a11.963 11.963 0 0 1-3.236 8.033A11.967 11.967 0 0 1 12.182 24h-.361a11.993 11.993 0 0 1-4.145-.806 12.04 12.04 0 0 1-4.274-2.836A12.057 12.057 0 0 1 .576 15.67 12.006 12.006 0 0 1 0 12.181v-.361a11.924 11.924 0 0 1 1.992-6.396 12.211 12.211 0 0 1 4.71-4.172A11.875 11.875 0 0 1 11.82 0m-.153 1.23a10.724 10.724 0 0 0-6.43 2.375 10.78 10.78 0 0 0-3.319 4.573 10.858 10.858 0 0 0 .193 8.12 10.788 10.788 0 0 0 3.546 4.421 10.698 10.698 0 0 0 4.786 1.946c1.456.209 2.955.124 4.376-.26a10.756 10.756 0 0 0 5.075-3.062 10.742 10.742 0 0 0 2.686-5.28 10.915 10.915 0 0 0-.122-4.682 10.77 10.77 0 0 0-7.098-7.626 10.78 10.78 0 0 0-3.693-.525z"
            />
          </svg>
        </div>
        <h3>
          Dell Inc.
        </h3>
        <h4>
          subtitle
        </h4>
        <p>
          desc.dell
        </p>
      </div>
      <div
        class="sc-hBMUJo bXVrzm"
      >
        <div>
          <img
            src="test-file-stub"
          />
        </div>
        <h3>
          PUCRS
        </h3>
        <h4>
          desc.research_intern
        </h4>
        <p>
          desc.intern
        </p>
      </div>
      <div
        class="sc-hBMUJo bXVrzm"
      >
        <div>
          <svg
            color="#FF7F00"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            style="color:#FF7F00"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M419.682 26.2l-8.66 2.452L32.915 135.81 55.27 214.7l386.77-109.608L419.683 26.2zm-12.41 22.224l9.074 32.014-41.086-22.942 32.013-9.072zM350.77 64.438l56.8 31.714-37.084 10.51-56.8-31.715 37.084-10.51zm-61.577 17.45l56.803 31.716-37.084 10.51-56.8-31.718 37.08-10.51zm-61.574 17.45l56.802 31.715-37.084 10.51-56.803-31.715 37.084-10.51zm-61.577 17.45l56.803 31.716-37.084 10.51-56.8-31.717 37.08-10.51zm-61.574 17.45l56.8 31.715-37.083 10.51-56.802-31.715 37.084-10.51zm-45.86 26.227l41.085 22.94-32.01 9.072-9.074-32.012zM55 215v274h402V215H55zm18 18h33.273L73 266.273V233zm58.727 0h38.546l-46 46H85.727l46-46zm64 0h38.546l-46 46h-38.546l46-46zm64 0h38.546l-46 46h-38.546l46-46zm64 0h38.546l-46 46h-38.546l46-46zm64 0h38.546l-46 46h-38.546l46-46zM439 245.727V279h-33.273L439 245.727zM73 297h366v174H73V297zm248.635 46.57l-192.44.703.067 18 192.44-.703-.067-18zM130.7 391.33l-.134 17.998 92.707.703.137-18-92.71-.7zm127.155.7l-.2 18 63.913.702.2-17.998-63.913-.703z"
            />
          </svg>
        </div>
        <h3>
          Gina Tells
        </h3>
        <h4>
          desc.personal_project
        </h4>
        <p>
          desc.ginatells
        </p>
      </div>
      <div
        class="sc-hBMUJo bXVrzm"
      >
        <div>
          <svg
            color="#0E6B0E"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            style="color:#0E6B0E"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M463 20.3L315.6 75.65 368.5 109C274 228 137.3 301.3 21.8 329.2l32.72 59.6C184.3 346.5 321.7 270.2 410.2 135.4l40.3 25.4L463 20.3zm7.7 116.7l-4.8 54.8-51.3-32.4c-1.8 2.7-3.7 5.3-5.6 8V487h78V137h-16.3zM320.1 265c-12.7 11-25.8 21.4-39.1 31.2V487h78V265h-38.9zm-123.7 84c-14.4 7.6-28.8 14.6-43.4 21.2V487h78V349h-34.6zM25 393v94h78v-94h-5.68c-14.82 5.5-29.63 10.6-44.35 15.3l-7.06 2.2-9.6-17.5H25z"
            />
          </svg>
        </div>
        <h3>
          Software KPIs
        </h3>
        <h4>
          desc.personal_project
        </h4>
        <p>
          desc.kpis
        </p>
      </div>
      <div
        class="sc-hBMUJo bXVrzm"
      >
        <div>
          <img
            src="test-file-stub"
          />
        </div>
        <h3>
          AGES
        </h3>
        <h4>
          desc.nonprofit_engineer
        </h4>
        <p>
          desc.ages
        </p>
      </div>
    </div>
  </section>
</div>
`;

exports[`<Portfolio/> Snapshot renders without crashing using shallow 1`] = `
<styled.div>
  <Home />
  <Skills />
  <Experience />
</styled.div>
`;
